# cryptic-pets-backend

./: .cursorrules  .env.emample  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  verification-link-template.html
application/breeds/: command_handlers.py  commands.py  handlers.py  queries.py  query_handlers.py  view_models.py
application/pet_records/: command_handlers.py  commands.py  queries.py  query_handlers.py  view_models.py
application/pets/: command_handlers.py  commands.py  handlers.py  queries.py  query_handlers.py  read_models.py  view_models.py
application/users/: command_handlers.py  commands.py  handlers.py  queries.py  query_handlers.py  view_models.py
docs/: README.md  architecture.md  ddd_improvement_plan.md  deployment.md  development.md  exception_architecture.md  exception_handling_refactor.md  exception_mapping_guide.md  product_document.md  user_crud_api.md
domain/: base_entity.py
domain/common/: __init__.py  aggregate_root.py  enhanced_enums.py  enhanced_i18n.py  entities.py  event_handlers.py  event_publisher.py  events.py  exceptions.py  repository.py  repository_base.py  specifications.py  value_object_base.py  value_objects.py
domain/pet_records/: entities.py  event_handlers.py  events.py  exceptions.py  pet_record_data.py  repository.py  value_objects.py
domain/pets/: entities.py  event_handlers.py  events.py  exceptions.py  genetic_profile.py  ownership_history.py  pet_age.py  repository.py  services.py  specifications.py  value_objects.py
domain/users/: entities.py  event_handlers.py  events.py  exceptions.py  repository.py  services.py  value_objects.py
examples/: domain_events_demo.py  value_objects_demo.py
infrastructure/: config.py  dependencies.py
infrastructure/dependencies/: __init__.py  breeds.py  database.py  events.py  mappers.py  pet_records.py  pets.py  repositories.py  security.py  users.py
infrastructure/events/: audit_event_handlers.py  event_registry.py  notification_event_handlers.py
infrastructure/logging/: config.py
infrastructure/security/: __init__.py  bcrypt_hasher.py
interfaces/http/: base_response.py  decorators.py  exception_mapping.py  (+1 more)
tests/: README.md  conftest.py
(+54 files in other folders)
